--- a/publication/csur23-gvaed/cite.bib
+++ b/publication/csur23-gvaed/cite.bib
@@ -1,6 +1,6 @@
-@article{liu2023generalized,
-  title={Generalized Video Anomaly Event Detection: Systematic Taxonomy and Comparison of Deep Models},
-  author={Liu, Yang and Yang, Dingkang and Wang, Yan and Liu, Jing and Song, Liang},
+@article{yang2023generalized,
+  title={Generalized video anomaly event detection: Systematic taxonomy and comparison of deep models},
+  author={Yang Liu, Dingkang Yang, Yan Wang, Jing Liu, Jun Liu, Azzedine Boukerche, Peng Sun, Liang Song},
   journal={arXiv preprint arXiv:2302.05087},
   year={2023}
 }
