--- a/publication/csur23-gvaed/cite.bib
+++ b/publication/csur23-gvaed/cite.bib
@@ -1,6 +1,10 @@
-@article{yang2023generalized,
+@article{liu2024generalized,
   title={Generalized video anomaly event detection: Systematic taxonomy and comparison of deep models},
-  author={Yang Liu, Dingkang Yang, Yan Wang, Jing Liu, Jun Liu, Azzedine Boukerche, Peng Sun, Liang Song},
-  journal={arXiv preprint arXiv:2302.05087},
-  year={2023}
+  author={Liu, Yang and Yang, Dingkang and Wang, Yan and Liu, Jing and Liu, Jun and Boukerche, Azzedine and Sun, Peng and Song, Liang},
+  journal={ACM Computing Surveys},
+  volume={56},
+  number={7},
+  pages={1--38},
+  year={2024},
+  publisher={Association for Computing Machinery}
 }
